Remove use of wrapper-type constructors
These constructors are deprecated and cause problems when the model
tests call assertSameInstance.